# ch_linkbot_binding

./: .gitmodules  CMakeLists.txt  WIX.patches  WIX.template.in  createpkg_mac.sh
chbarobo/lib/: chlinkboti.chf  chlinkbotl.chf
chlinkbot_src/: CMakeLists.txt  LinkbotLabs_C-STEM_Edition.nsi  Makefile  Makefile_new  Makefile_win32  Makefile_win32_MSVC  Makefile_win64  chlinkbot.chf  chlinkboti.chf  chlinkboti_chdl.cpp  chlinkbotl.chf  chlinkbotl_chdl.cpp  createpkg.sh  createpkg32.sh  createpkg64.sh  createpkg_dist.sh  createpkg_mac.sh  liblinkbot.dl  linkbot.h  test.ch
include/barobo/: linkbot.hpp
src/: CMakeLists.txt  chlinkboti_chdl.cpp  chlinkbotl_chdl.cpp  linkbot_group.cpp  linkbot_wrapper.cpp  linkbot_wrapper.hpp  rgbhashtable.c.cpp  rgbhashtable.h  test.cpp
test/: CMakeLists.txt  motorPower.cpp  setJointMovementState.cpp  test.cpp  testGetters.cpp  testSetters.cpp
test/LinkbotLabsChTests/: test1_turnandhold.ch  test2_speedcontrol.ch  test3_groupandindividual.ch  test4_setjointspeedratio.ch  test5_recorddistance.ch
